--- a/package.json
+++ b/package.json
@@ -3,16 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemom src/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.21.1",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7"
-  }
+  "description": ""
 }
